create my web fonts for the project 1. action_man_bold 2. cooperhewitt_light downloaded from font_Squirrel test the fonts to see if they are working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section>
-        <header></header>
+        <header>my name is zakariya</header>
         <nav></nav>
         <main></main>
         <aside></aside>
